# Axon

./: .gitignore  ARCHITECTURE_AXON.md  AXON_VISION.md  Architecture.md  CHANGELOG.md  Cargo.toml  DEAD_CODE_AUDIT.md  GEMINI.md  INSTALL.md  Nogari.md  README.ko.md  README.md  README_KO.md  age_calculator.db  architecture.bak.md  architecture.md  architecture_report.md  atomic_test_suite.py  axon.db  axon.db-shm  axon.db-wal  axon_config.json  axon_lsp.json  junior_1.md  junior_2.md  junior_3.md  mock_ollama.py  repro_destructive_rewrite.py  senior.md  synapse.config.json  test_run_full.py  노가리.md
TEST4_GTK/spec/: CMakeLists.txt  immutable_constraints.json
TEST4_GTK/spec/.axon/sandbox/src/: lua_runtime.cpp.failed  text_buffer.cpp.failed
TEST4_GTK/spec/include/: gtk_app.h  input.h  lua_runtime.h  terminal_renderer.h  text_buffer.h
TEST5_win32/spec/: CMakeLists.txt  architecture_seed.md  constitution.md  hardening.md  immutable_constraints.json  implementation_rules.md
TEST5_win32/spec/include/: input.h  text_buffer.h
crates/axon-agent/: Cargo.toml  Nogari.md
crates/axon-agent/src/: composer.rs  lib.rs  lounge.rs  persona.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: ir.rs  ir_change.rs  lib.rs  patch.rs  profile.rs  protocol.rs  rules.rs  spec.rs  transformer.rs
crates/axon-core/src/validator/: analysis.rs  error.rs  integration.rs  mod.rs  semantic.rs  test_pipeline.rs  types.rs
crates/axon-core/src/validator/debug/: analysis_contract.rs  ast_printer.rs  clusterer.rs  contract.rs  coverage.rs  extractor_test.rs  matcher_test.rs  mod.rs  rule_generator.rs  test_gen.rs
crates/axon-daemon/: BASELINE_MANIFEST.json  BASELINE_SEAL_CERTIFICATE.json  Cargo.toml  REPLAY_CERTIFICATE.json  axon.db
crates/axon-daemon/default/: spec.md  user_storage.h
crates/axon-daemon/default/contracts/: jurisprudence.json  project_ir.json
crates/axon-daemon/src/: admin.rs  bootstrap.rs  cli.rs  controller.rs  debug_hook.rs  dep_graph.rs  events.rs  execution_validator.rs  lib.rs  main.rs  observability.rs  pipeline.rs  rewrite_detector.rs  server.rs
crates/axon-daemon/src/governance/: atomic_io.rs  circuit_breaker.rs  determinism.rs  lease.rs  mod.rs  ownership.rs  simulation.rs  store.rs
crates/axon-daemon/src/intelligence/: anchor_validator.rs  canonicalizer.rs  causality.rs  commit.rs  constraint_meta.rs  coordinator.rs  decision.rs  determinism_harness.rs  edit_plan.rs  global_registry.rs  heatmap.rs  include_path_normalizer.rs  ir_diff.rs  jurisprudence.rs  mod.rs  mutation_intent.rs  mutation_sandbox.rs  observatory.rs  orchestrator.rs  patch_ir.rs  pipeline.rs  planner.rs  priority.rs  promotion.rs  provenance.rs  rollback.rs  roundtrip_validator.rs  rule_engine.rs  rule_registry.rs  selection.rs  semantic_authority_gate.rs  semantic_debugger.rs  semantic_distance.rs  semantic_tokens.rs  shadow_mutator.rs  signature_drift.rs  stability_matrix.rs  staging.rs  surgical_editor.rs  surgical_replay.rs  (+2 more)
crates/axon-daemon/src/intelligence/ast/: hash_types.rs  mod.rs  treesitter.rs
crates/axon-daemon/src/intelligence/common/: types.rs
crates/axon-daemon/src/intelligence/corpus/: campaign_manifest.rs  campaign_runner.rs  catastrophe_archive.rs  corpus_executor.rs  corpus_fingerprint.rs  corpus_governance.rs  corpus_ingestor.rs  corpus_seal.rs  divergence_cluster.rs  entropy_profiler.rs  entropy_snapshot_store.rs  failure_classifier.rs  failure_lineage.rs  hierarchical_topology.rs  mod.rs  mutation_campaign.rs  physical_mount.rs  replay_seed.rs  repo_fetcher.rs  rox_filer_hotspot.rs  runtime_adjacency.rs  workspace_materializer.rs  xchat_hotspot.rs
crates/axon-daemon/src/intelligence/evolution/: dashboard.rs  drift_visualizer.rs  ledger.rs  mod.rs  proof_artifact.rs  workflow.rs
crates/axon-daemon/src/intelligence/intent_lowering/: lower_append_stmt.rs  lower_insert_field.rs  lower_replace_fn_body.rs  lowering_contract.rs  lowering_replay.rs  mod.rs
crates/axon-daemon/src/intelligence/language_contract/: c.rs  common.rs  cpp.rs  mod.rs  python.rs  rust.rs
crates/axon-daemon/src/intelligence/lsp/: clangd.rs  diagnostics.rs  lua_lsp.rs  mod.rs  pyright.rs  rust_analyzer.rs  session.rs  supervisor.rs
crates/axon-daemon/src/intelligence/mutation/: boundary_lock.rs  intent_dsl.rs  mod.rs  mutation_transaction.rs  safe_envelope.rs
crates/axon-daemon/src/intelligence/replay/: c_topology_strike.rs  catastrophe_pressure.rs  closed_loop_harness.rs  corpus_fingerprint.rs  corpus_runner.rs  gtk2_gobject_hell.rs  gtk_baseline_seal.rs  gtk_stage1_2_strike.rs  gtk_stage3_collapse.rs  gtk_topology_strike.rs  harness.rs  immunology_genealogy.rs  lineage_taxonomy.rs  metrics_aggregator.rs  mod.rs  orchestrator.rs  strike_test.rs  (+7 more)
crates/axon-daemon/src/quarantine/: legacy_daemon.rs  legacy_daemon_snapshot.json  legacy_main.rs  legacy_server_snapshot.json
crates/axon-daemon/tests/chaos/: barrier_race.rs  mid_dispatch_kill.rs  mod.rs  orphan_lock.rs  recovery_loop.rs  rework_storm.rs
crates/axon-daemon/tests/failure_cascade/: atomic_crash.rs  circuit_breaker.rs  determinism_replay.rs  lease_eviction.rs  ripple_containment.rs
crates/axon-daemon/tests/integration/: factory_convergence.rs  mod.rs
crates/axon-daemon/tests/promotion/: formatting_hostility.rs  quarantine_regression.rs  replay_stability.rs  safe_subset_v1.rs  semantic_integrity.rs  topology_preservation.rs
crates/axon-ir/: Cargo.toml
crates/axon-ir/src/: lib.rs  spec_ir.rs  spec_parser.rs
crates/axon-ir/src/canonicalizer/: mod.rs
crates/axon-ir/src/emitter/: mod.rs
crates/axon-ir/src/linker/: mod.rs
crates/axon-ir/src/parser/: json.rs  markdown.rs  mod.rs  toml.rs  yaml.rs
crates/axon-ir/src/schema/: mod.rs  topology.rs  types.rs
crates/axon-ir/src/semantic/: mod.rs  ontology.rs  spec.rs  validator.rs  violation.rs
crates/axon-ir/src/spec_extractor/: mod.rs
crates/axon-ir/src/validator/: mod.rs
crates/axon-ir/tests/semantic/: contamination.rs  mod.rs
crates/axon-model/: Cargo.toml
crates/axon-model/src/: lib.rs
crates/axon-storage/: Cargo.toml
crates/axon-storage/src/: lib.rs
(+727 files in other folders)
