[workspace]
resolver = "2"
members = [
    "crates/axon-core",
    "crates/axon-daemon",
    "crates/axon-dispatcher",
    "crates/axon-agent",
    "crates/axon-model",
    "crates/axon-storage"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
fd-lock = "4.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.44"
rusqlite = "0.31.0"
