[package]
name = "axon-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axon-core = { path = "../axon-core" }
axon-model = { path = "../axon-model" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { workspace = true }
rand = "0.8"
