[package]
name = "axon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true }
tracing = "0.1"
rustpython-parser = "0.3.1"
rustpython-ast = "0.3.1"
lazy_static = "1.4"
