[package]
name = "axon-daemon"
version = "0.1.0"
edition = "2024"
default-run = "axon-daemon"

[dependencies]
axon-core = { path = "../axon-core" }
axon-dispatcher = { path = "../axon-dispatcher" }
axon-agent = { path = "../axon-agent" }
axon-model = { path = "../axon-model" }
axon-storage = { path = "../axon-storage" }
axon-ir = { path = "../axon-ir" }
axon-platform-win32 = { path = "../axon-platform-win32" }
axon-ir-validator = { path = "../axon-ir-validator" }
anyhow = "1.0"
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { workspace = true }
futures-util = "0.3"
notify = { workspace = true }
fd-lock = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
regex = "1.12.3"
sha2 = "0.11.0"
rusqlite = { version = "0.29", features = ["bundled"] }
once_cell = "1.21.4"
socket2 = "0.6.3"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-c = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-lua = "0.2.0"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3.27.0"
