[package]
name = "axon-ir"
version = "0.0.28"
edition = "2021"
description = "AXON IR Compiler - Universal Build Graph Runtime IR"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"