[package]
name = "axon-ir"
version = "0.0.28"
edition = "2021"
description = "AXON IR Compiler - Universal Build Graph Runtime IR"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
pulldown-cmark = "0.10.0"
regex = "1.10"

[[test]]
name = "semantic"
path = "tests/semantic/mod.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"